plugins
{
    id 'checkstyle'
    id 'java-library'
    id 'com.diffplug.spotless' version '8.10.0'
}

version = '0.0.0'
group   = 'io.github.borschtoverflow'

java
{
    toolchain
    {
        languageVersion = JavaLanguageVersion.of(25)
        vendor = JvmVendorSpec.ADOPTIUM
    }

    withSourcesJar()
    withJavadocJar()
}


javadoc
{
    final int currentYear = Year.now().value
    final String licenseURL = "https://github.com/BorschtOverflow/CoffeeCrypt/blob/master/LICENSE.md"
    final String footer = "Copyright &copy; ${currentYear} The Project Authors, licensed under <a href=\"${licenseURL}\">LGPL 3</a>"

    destinationDir = file('docs/')

    options
    {
        addStringOption('Xdoclint:-missing', '-quiet')
        header = "v${project.version}"
        bottom = "${footer}"
    }
}

jar
{
    metaInf
    {
        from (project.rootDir)
        {
            include 'LICENSE.md'
        }
    }
}

repositories
{
    mavenCentral()
}

dependencies
{
    final String junitVersion  = "5.8.1"
    final String lombokVersion = "1.18.48"

    compileOnly             "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor     "org.projectlombok:lombok:${lombokVersion}"
    testCompileOnly         "org.projectlombok:lombok:${lombokVersion}"
    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    testImplementation      "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
    testRuntimeOnly         "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
    testRuntimeOnly         "org.junit.platform:junit-platform-launcher"
}

test
{
    useJUnitPlatform()

    testLogging
    {
        events 'passed', 'skipped', 'failed'
    }
}

clean
{
    delete 'docs/', 'bin/', '.settings/', '.classpath', '.project', '.factorypath'
}

apply from: 'gradle/format.gradle'

sourceSets
{
    examples
    {
        java
        {
            srcDirs = ['examples/']
        }

        compileClasspath += sourceSets.main.output + configurations.compileClasspath
        runtimeClasspath += sourceSets.main.output + configurations.runtimeClasspath
    }
}

tasks.withType(JavaCompile).configureEach
{
    // Silence Lombok warning: "A terminally deprecated method in sun.misc.Unsafe has been called"
    options.forkOptions.jvmArgs << '--sun-misc-unsafe-memory-access=allow'
}

build.dependsOn 'javadoc'
